--- a/src/components/Header/Navigation/Navigation.scss
+++ b/src/components/Header/Navigation/Navigation.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 .nav {
   display: flex;
   gap: 40px;
@@ -9,7 +11,7 @@
       content: '';
       width: 0px;
       height: 2px;
-      background-color: rgb(22, 107, 199);
+      background-color: $MainBlueColor;
       position: absolute;
       bottom: -6px;
       left: 0;
