--- a/src/components/Main/Item/Item.scss
+++ b/src/components/Main/Item/Item.scss
@@ -5,20 +5,47 @@
   border-radius: 8px;
   min-height: 360px;
   transition: all 0.3s;
+  overflow: hidden;
   &:hover {
-    transform: scale(1.02);
     cursor: pointer;
-    box-shadow: 0px 0px 14px 4px rgb(109, 105, 105);
+    box-shadow: 0px 0px 14px 6px rgb(109, 105, 105);
     & .item__body-title {
-      color: $MainBlueColor;
+      color: white;
+      transition: all 0.3s;
+      font-weight: 700;
+      transform: scale(1.1);
+      text-shadow: 0px 2px 2px rgb(34, 33, 33);
+    }
+    & .item__img::after {
+      background-color: rgb(16, 16, 16, 0.2);
+      transform: scale(1.5);
+    }
+    & .item__img {
+      & img {
+        transform: scale(1.5);
+      }
     }
   }
   &__img {
     position: relative;
+    transition: all 0.3s;
     width: 100%;
     height: 50%;
+    &::after {
+      content: '';
+      transition: all 0.3s;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(16, 16, 16, 0.4);
+      border-radius: 8px 8px 0px 0px;
+      z-index: 2;
+    }
     & img {
       border-radius: 8px 8px 0px 0px;
+      transition: all 0.3s;
       position: absolute;
       width: 100%;
       height: 100%;
@@ -35,7 +62,9 @@
     padding: 15px 20px;
     &-title {
       color: rgb(72, 66, 66);
+      transition: all 0.3s;
       font-weight: 500;
+      z-index: 5;
     }
     &-info {
       font-size: 16px;
